--- a/userpanel/modules/info/style/bclean/templates/consentbox.html
+++ b/userpanel/modules/info/style/bclean/templates/consentbox.html
@@ -2,6 +2,6 @@
 <div class="alert alert-danger">
     {ConfigHelper::getConfig('userpanel.data_consent_text')|replace:"\n":"<br />"}
     <br/><br/>
-    {button class="btn btn-danger" href="?m=info&amp;consent=1" icon="confirm" label="<userpanel!>Confirm"}
+    {button class="btn btn-danger" href="?m=info&amp;consent=1" icon="confirm" label="<!userpanel>Confirm"}
 </div>
 {/box}
