--- a/userpanel/modules/notices/style/bclean/templates/notices-callback-handler.html
+++ b/userpanel/modules/notices/style/bclean/templates/notices-callback-handler.html
@@ -70,7 +70,7 @@
                         {$urgent_notice.body}
                     </div>
                     <div class="modal-footer">
-                        {button id="urgent-notice-confirm" data_id="{$urgent_notice.id}" class="btn btn-primary" icon="confirm" label="<userpanel!>Confirm"}
+                        {button id="urgent-notice-confirm" data_id="{$urgent_notice.id}" class="btn btn-primary" icon="confirm" label="<!userpanel>Confirm"}
                     </div>
                 </div>
             </div>
