devel: change icon for tariff period

--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -90,7 +90,6 @@
 																		{tip text="Billing according to the net price"}>
 																{trans('according in net')}
 															</label>
-
 														</td>
 													</tr>
 													<tr>
@@ -116,7 +115,7 @@
 										</tr>
 										<tr>
 											<td>
-												{icon name="money"}
+												{icon name="period"}
 											</td>
 											<td>
 												{trans("Accounting")}
