--- a/templates/default/tariff/tariffinfo.html
+++ b/templates/default/tariff/tariffinfo.html
@@ -152,7 +152,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            {icon name="money"}
+                                            {icon name="period"}
                                         </td>
                                         <td>
                                             {trans("Accounting")}
