--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -142,7 +142,7 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                {icon name="money"}
+                                                {icon name="period"}
                                             </td>
                                             <td>
                                                 {trans("Accounting")}
