--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -267,7 +267,7 @@
 							<div class="lms-ui-tab-table-column ptu_quantity">
 								{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}
 									{if $a.tariffid || $a.liabilityid}
-										{$a.tax_label}{$a.taxl_label}
+										{$a.tax_label}
 									{/if}
 								<br>
 								{/if}
