improvement: new lms-ui-icon-run, lms-ui-icon-execute, lms-ui-icon-launch icons

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1845,3 +1845,14 @@
     content: @fa-var-suitcase;
   }
 }
+
+.lms-ui-icon-run,
+.lms-ui-icon-launch,
+.lms-ui-icon-execute {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-terminal;
+  }
+}
