devel: added help/hint icon

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -555,7 +555,6 @@
   }
 }
 
-.lms-ui-icon-help,
 .lms-ui-icon-info,
 .lms-ui-icon-details {
   .fa-icon;
@@ -563,6 +562,16 @@
   .lms-ui-icon;
   &:before {
     content: @fa-var-info;
+  }
+}
+
+.lms-ui-icon-help,
+.lms-ui-icon-hint {
+  .fa-icon;
+  .far;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-question-circle;
   }
 }
 
