improvement: message add body hint in separate clickable icon

--- a/css/style.less
+++ b/css/style.less
@@ -2047,7 +2047,7 @@ div.lms-ui-persistent-filter {
 }
 
 div.lms-ui-wysiwyg-editor {
-	display: flex;
+	display: inline-flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
