improvement: message add body hint in separate clickable icon

--- a/css/style.less
+++ b/css/style.less
@@ -39,6 +39,7 @@
 @import "less/advanced-select";
 @import "less/combobox";
 @import "less/customer-select";
+@import "less/tooltip";
 
 html {
 	height: 100%;
