--- a/css/less/tooltip.less
+++ b/css/less/tooltip.less
@@ -1,7 +1,7 @@
 /*
  * LMS version 1.11-git
  *
- *  (C) Copyright 2001-2020 LMS Developers
+ *  (C) Copyright 2001-2021 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -23,5 +23,44 @@
  */
 
 .lms-ui-tooltip-toggle {
-  cursor: pointer;
+  &:not(.ui-tooltip) {
+    cursor: pointer;
+  }
+
+  .lms-ui-tooltip-titlebar {
+    display: none;
+    justify-content: flex-end;
+    .close-button {
+      cursor: pointer;
+    }
+  }
+
+  @media screen and (max-width: @mobile-max-width) {
+    &.ui-tooltip {
+      padding: 0;
+      font-size: 200%;
+    }
+
+    .ui-tooltip-content {
+      padding: 1em;
+    }
+
+    &.ui-widget.ui-widget-content {
+      border: 0;
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      max-width: unset;
+      max-height: unset;
+      &.ui-widget-shadow {
+        box-shadow: unset;
+      }
+    }
+
+    & .lms-ui-tooltip-titlebar {
+      display: flex;
+    }
+  }
 }
