bugfix: fixed archiving action in documentedit form (LMS+ fixes #1830)

--- a/templates/default/document/documentedit.html
+++ b/templates/default/document/documentedit.html
@@ -200,7 +200,7 @@
 			</td>
 		</tr>
 		{/if}
-		{if !empty($document.closed) && ($document.docrights && $smarty.const.DOCRIGHT_ARCHIVE)}
+		{if !empty($document.closed) && ($document.docrights & $smarty.const.DOCRIGHT_ARCHIVE)}
 		<tr>
 			<td>
 				{icon name="archive"}
