--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -75,7 +75,7 @@
 				<br>
 				<span class='lms-ui-assignment-not-commited'><strong>{trans("Assignment from not approved document")}</strong></span>"
 			{/capture}
-			{button type="link" icon="hint" class="lms-ui-tooltip-toggle" tip=$assignment_hint href=""}
+			{hint content=$assignment_hint}
 		{/tab_header_cell}
 		{tab_header_cell}
 			{if !$customerinfo.deleted}
