--- a/templates/default/document/documentpromotions.html
+++ b/templates/default/document/documentpromotions.html
@@ -60,7 +60,7 @@
 	$('#a_period').remove();
 
 	$(function() {
-		$('#submit-button').click(function (e) {
+		$('#submit-button,#print-button').click(function (e) {
 			if (!$(this)[0].form.checkValidity() || (parseInt($('#promotion-select').val()) && !customer_assignment_helper.validate(e))) {
 				return;
 			}
