--- a/css/style.less
+++ b/css/style.less
@@ -39,7 +39,7 @@
 @import "less/advanced-select";
 @import "less/combobox";
 @import "less/customer-select";
-@import "less/tooltip";
+@import "less/hint";
 
 html {
 	height: 100%;
