--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -99,25 +99,28 @@
 	</TR>
 	</THEAD>
 	<TBODY>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Credit note number:")}
-		</TD>
-		<TD class="nobr">
-			<INPUT TYPE="TEXT" NAME="cnote[number]" VALUE="{$cnote.number}" SIZE="10"
-					{tip text="Enter credit note number. WARNING! Changing this number can be DANGEROUS! (leave this field empty to obtain next number)" trigger="number"}>&nbsp;
+	<tr>
+		<td class="nobr">
+			<strong>{trans("Credit note number:")}</strong>
+		</td>
+		<td class="nobr">
+			<input type="text" name="cnote[number]" value="{$cnote.number}" size="10"
+				{tip text="Enter credit note number. WARNING! Changing this number can be DANGEROUS! (leave this field empty to obtain next number)" trigger="number"}>&nbsp;
 			{if $numberplanlist}
-				<SELECT name="cnote[numberplanid]" {tip text="Select numbering plan"}>
-					{foreach item=plan from=$numberplanlist}
-						{assign var=period value=$plan.period}
-						<OPTION value="{$plan.id}"{if $plan.id==$cnote.numberplanid} selected{/if}>{number number=$plan.next template=$plan.template time=$cnote.cdate customerid=$refdoc.customerid} ({$_NUM_PERIODS.$period})</OPTION>
+				<select name="cnote[numberplanid]" {tip text="Select numbering plan"} required>
+					<option value="">{trans("- select -")}</option>
+					{foreach $numberplanlist as $plan}
+						{$period = $plan.period}
+						<option value="{$plan.id}"{if $plan.id == $cnote.numberplanid} selected{/if}
+							>{number number=$plan.next template=$plan.template time=$cnote.cdate customerid=$refdoc.customerid} ({$_NUM_PERIODS.$period})
+						</option>
 					{/foreach}
-				</SELECT>
+				</select>
 			{else}
-				<INPUT type="hidden" name="cnote[numberplanid]" value="0">
+				<input type="hidden" name="cnote[numberplanid]" value="0">
 			{/if}
-		</TD>
-	</TR>
+		</td>
+	</tr>
 	<TR>
 		<TD class="bold nobr">
 			{trans("Settlement date:")}
