devel/improvement: transformed custom info popups to native lms-ui-hint-rollover classed controls

--- a/css/less/hint.less
+++ b/css/less/hint.less
@@ -37,13 +37,15 @@
   }
 
   &.ui-tooltip {
-    max-width: fit-content;
+    max-width: 50vw;
     .lms-ui-hint-titlebar {
       padding-bottom: 0.5em;
     }
     .lms-ui-hint-content {
       max-height: 90vh;
       overflow-y: auto;
+      overflow-x: visible;
+      padding-right: 1em;
     }
   }
 
