--- a/templates/default/customer/customersearchresults.html
+++ b/templates/default/customer/customersearchresults.html
@@ -74,7 +74,14 @@
 	{section name=customerlist loop=$customerlist start=$start max=$pagelimit}
 	<TR class="highlight {if $customerlist[customerlist].deleted} lms-ui-resource-deleted{/if} {if $customerlist[customerlist].account && !$customerlist[customerlist].nodeac} blend{/if}" data-name="{$customerlist[customerlist].customername|escape:"javascript"|escape:"html"}">
 		<TD onClick="return self.location.href='?m=customerinfo&id={$customerlist[customerlist].id}';" valign="top">
-			<IMG src="img/{$_CSTATUSES[$customerlist[customerlist].status].img}" alt="">{if $customerlist[customerlist].info} <img src="img/info1.gif" ALT="" {tip text=$customerlist[customerlist].info}>{/if} <A name="{$customerlist[customerlist].id}" class="lms-ui-tooltip-customerinfo" data-resourceid="{$customerlist[customerlist].id}"><B>{$customerlist[customerlist].customername}</B></A>
+			<img src="img/{$_CSTATUSES[$customerlist[customerlist].status].img}" alt="">
+			{if $customerlist[customerlist].info}
+				<img src="img/info1.gif" alt="" {tip text=$customerlist[customerlist].info}>
+			{/if}
+			<a name="{$customerlist[customerlist].id}" class="lms-ui-hint-rollover"
+				data-url="?m=customerinfoshort&id={$customerlist[customerlist].id}">
+					<strong>{$customerlist[customerlist].customername}</strong>
+			</a>
 			{if !empty($customerlist[customerlist].karma)}
 				<i class="lms-ui-icon-star{if $customerlist[customerlist].karma > 0} green{else} red{/if}" title="{trans('Karma')}"></i>
 				(<span class="lms-ui-counter">{$customerlist[customerlist].karma}</span>)
@@ -83,9 +90,12 @@
 			<IMG src="img/home.gif" alt="">&nbsp;{$customerlist[customerlist].full_address}{if $customerlist[customerlist].country != ""}, {t}{$customerlist[customerlist].country}{/t}{/if}
 		</TD>
 		<TD valign="top" align="right" NOWRAP>
-			({$customerlist[customerlist].id|string_format:"%04d"})<BR>
+			({$customerlist[customerlist].id|string_format:"%04d"})
+			<br>
 			{if $customerlist[customerlist].account}
-				<IMG SRC="img/node{if !$customerlist[customerlist].online}_off{/if}.gif" alt="" class="lms-ui-tooltip-nodelist" data-resourceid="{$customerlist[customerlist].id}"></A>
+				<img src="img/node{if !$customerlist[customerlist].online}_off{/if}.gif" alt=""
+					class="lms-ui-hint-rollover"
+					data-url="?m=customerinfoshort&id={$customerlist[customerlist].id}">
 			{/if}
 		</TD>
 		<TD class="text-right valign-top nobr">
