--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -2,9 +2,20 @@
 <TR class="highlight event-single{if $event.closed} blend{/if}{if $event.wholeday} event-whole-day{/if}{if $event.multiday} event-multi-day{/if}"
     data-event-id="{$event.id}"
     data-popup-menu-title="{t a=$event.id|string_format:"#%06d"}Event $a{/t}">
-	<TD style="min-width: 90px; {if isset($_EVENTSTYLES[$event.type])} {$_EVENTSTYLES[$event.type]}{/if}" class="text-center bold {if !$event.closed || ($event.closed && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))) || ConfigHelper::checkPrivilege('superuser')}event-single-sortable-handler{/if}">
-    {$_EVENTTYPES[$event.type]}{if $_EVENTTYPES[$event.type]}<br>{/if}{if $event.ticketid}<span class="lms-ui-tooltip-rtticketinfo" data-resourceid="{$event.ticketid}"><a href="?m=rtticketview&id={$event.ticketid}" style="color: black">{$event.ticketid|string_format:"%06d"}</a></span>{/if}
-    </TD>
+	<td style="min-width: 90px; {if isset($_EVENTSTYLES[$event.type])} {$_EVENTSTYLES[$event.type]}{/if}" class="text-center bold {if !$event.closed || ($event.closed && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))) || ConfigHelper::checkPrivilege('superuser')}event-single-sortable-handler{/if}">
+        {$_EVENTTYPES[$event.type]}
+            {if $_EVENTTYPES[$event.type]}
+            <br>
+        {/if}
+        {if $event.ticketid}
+            <span class="lms-ui-hint-rollover"
+                data-url="?m=rtticketinfo&id={$event.ticketid}">
+                <a href="?m=rtticketview&id={$event.ticketid}" style="color: black">
+                    {$event.ticketid|string_format:"%06d"}
+                </a>
+            </span>
+        {/if}
+    </td>
     <TD class="text-left nobr bold" style="min-width:100px" data-target-url="?m=eventinfo&id={$event.id}">
         {if $event.endtime == 86400}
             {trans("whole day")}
@@ -32,13 +43,20 @@
                 {/foreach}
             {else}
                 <br>
-                <i class="lms-ui-icon-user lms-ui-tooltip-eventinfoshort" data-resourceid="{$event.id}"></i>
+                <i class="lms-ui-icon-user lms-ui-hint-rollover"
+                   data-url="?m=eventinfoshort&id={$event.id}"></i>
                 {$event.userlist|@count}
             {/if}
         {/if}
     </TD>
     <TD data-target-url="?m=eventinfo&id={$event.id}">
-        <a href="?m=eventinfo&id={$event.id}"><i class="lms-ui-icon-timetable lms-ui-tooltip-eventinfoshort" data-resourceid="{$event.id}"></i> <span class="bold" {if !$event.closed}style="color:black"{/if}>{$event.title|escape}</span></a>
+        <a href="?m=eventinfo&id={$event.id}">
+            <i class="lms-ui-icon-timetable lms-ui-hint-rollover"
+                data-url="?m=eventinfoshort&id={$event.id}"></i>
+            <span class="bold" {if !$event.closed}style="color:black"{/if}>
+                {$event.title|escape}
+            </span>
+        </a>
         {if !ConfigHelper::checkConfig('phpui.timetable_hide_description')}{if $event.description != ''}<br>{icon name="description"} {$event.description}{/if}{/if}
         {if $event.note != ''}<span{if !$event.closed} style="color: red;"{/if}><br>{icon name="note"} {$event.note|escape}</span>{/if}
     </TD>
