--- a/templates/default/voipaccount/voipaccountlist.html
+++ b/templates/default/voipaccount/voipaccountlist.html
@@ -89,8 +89,11 @@
 		{if $voipaccountlist[voipaccountlist].location} / {$voipaccountlist[voipaccountlist].location}{if $voipaccountlist[voipaccountlist].borough_name} ({$voipaccountlist[voipaccountlist].state_name} / {$voipaccountlist[voipaccountlist].district_name} / {$_BOROUGHTYPES[$voipaccountlist[voipaccountlist].borough_type]} {$voipaccountlist[voipaccountlist].borough_name}){/if}{/if}
 		<br>
                 <img src="img/customer.gif" alt="">&nbsp;
-                <a href="?m=customerinfo&id={$voipaccountlist[voipaccountlist].ownerid}" class="lms-ui-tooltip-customerinfo" data-resourceid="{$voipaccountlist[voipaccountlist].ownerid}">
-                    {$voipaccountlist[voipaccountlist].owner|truncate:40:"&hellip;":true|replace:" ":"&nbsp;"} ({$voipaccountlist[voipaccountlist].ownerid|string_format:"%04d"})
+                <a href="?m=customerinfo&id={$voipaccountlist[voipaccountlist].ownerid}"
+                    class="lms-ui-hint-rollover"
+                    data-url="?m=customerinfoshort&id={$voipaccountlist[voipaccountlist].ownerid}">
+                    {$voipaccountlist[voipaccountlist].owner|truncate:40:"&hellip;":true|replace:" ":"&nbsp;"}
+                    ({$voipaccountlist[voipaccountlist].ownerid|string_format:"%04d"})
                 </a>
             </td>
             <td onClick="return self.location.href = '?m=voipaccountinfo&amp;id={$voipaccountlist[voipaccountlist].id}';" valign="top" nowrap>
