--- a/templates/default/numberplan/numberplanedit.html
+++ b/templates/default/numberplan/numberplanedit.html
@@ -20,7 +20,9 @@
 			</TD>
 			<TD>
 				<input type="text" name="numberplanedit[template]" value="{$numberplanedit.template|escape}"
-						{tip text="Enter number template<br><br>Supported substitution symbols:<br><strong>%N</strong> - document number,<br><strong>%m</strong> - month number (always two digits),<br><strong>%Y</strong> - year number (always four digits),<br><strong>%C</strong> - customer id; if this symbol is present then customer dedicated numbering applies.<br><br>Other symbols can be used which are described in PHP <strong>strftime<strong> function documentation." trigger="template"}>
+					{tip trigger="template"}>
+				{capture assign="template_hint"}{trans("Enter number template<br><br>Supported substitution symbols:<br><strong>%N</strong> - document number,<br><strong>%m</strong> - month number (always two digits),<br><strong>%Y</strong> - year number (always four digits),<br><strong>%C</strong> - customer id; if this symbol is present then customer dedicated numbering applies.<br><br>Other symbols can be used which are described in PHP <strong>strftime<strong> function documentation.")}{/capture}
+				{hint content=$template_hint}
 			</TD>
 		</TR>
     </thead>
