--- a/templates/default/rt/rtqueueviewboxrow.html
+++ b/templates/default/rt/rtqueueviewboxrow.html
@@ -1,7 +1,7 @@
 {block name=rtboxrow}
 <TR class="single-ticket {if $ticket.state == $smarty.const.RT_RESOLVED}blend{/if} highlight lms-ui-resource{if $ticket.deleted == 1 && $ticket.deltime != 0}-deleted{elseif $ticket.delcount && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}-partly-deleted{/if}"
 		id="ticket-{$ticket.id}"
-		{*data-target-url="?m=rtticketview&id={$ticket.id}"*}
+		data-target-url="?m=rtticketview&id={$ticket.id}"
 		data-name="{$ticket.id|string_format:"%06d"}"
 		data-popup-menu-title="{t a=$ticket.id|string_format:"#%06d"}Ticket $a{/t}"
 		data-ticket-id="{$ticket.id}">
