bugfix: fixed typo in parameter name

--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -250,7 +250,7 @@
 							{if $ticket.nodeid}
 							<TR>
 								<TD class="bold nobr">
-									{icon name="node" labe="Node:"}
+									{icon name="node" label="Node:"}
 								</TD>
 								<TD>
 									<a href="?m=nodeinfo&id={$ticket.nodeid}">
